kubernetes/nextcloud-old/mariadb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nextcloud-mariadb
  name: nextcloud-mariadb
  namespace: nextcloud-old
spec:
  replicas: 1
  serviceName: nextcloud-mariadb
  selector:
    matchLabels:
      app: nextcloud-mariadb
  template:
    metadata:
      labels:
        app: nextcloud-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6.25
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mariadb
          args: ["mysqld", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: nextcloud-secrets
              mountPath: /secrets
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
      volumes:
        - name: nextcloud-secrets
          secret:
            secretName: nextcloud-secrets
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: local-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud-mariadb
  name: nextcloud-mariadb
  namespace: nextcloud-old
spec:
  ports:
    - name: mariadb
      port: 3306
      targetPort: mariadb
  selector:
    app: nextcloud-mariadb
